fix horizontal scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,6 @@
 .App {
   background-color: #e9ecef;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   height: max-content;
 }
